filter in data table, about in dashborad

--- a/referral/static/referral/css/sb-admin-2.css
+++ b/referral/static/referral/css/sb-admin-2.css
@@ -2452,15 +2452,15 @@ fieldset:disabled a.btn {
 }
 
 .btn-secondary {
-  color: #fff;
-  background-color: #858796;
-  border-color: #858796;
+  color: #858796;
+  background-color: #fff;
+  border: 1px solid #e3e6f0;
 }
 
 .btn-secondary:hover {
-  color: #fff;
-  background-color: #717384;
-  border-color: #6b6d7d;
+  color: #858796;
+  background-color: #f2f2f2;
+  border-color: #e3e6f0;
 }
 
 .btn-secondary:focus, .btn-secondary.focus {
