--- a/users/templates/users/password_reset_confirm.html
+++ b/users/templates/users/password_reset_confirm.html
@@ -48,21 +48,6 @@
               </div>
             </form>
           </div>
-
-<div id="content-wrapper" class=".mh-100 m-5 d-flex flex-column">
-  <div class="container d-flex h-100">
-      <div class="card-body align-items-center h-100">
-          <div class="text-center">
-             <img class="img-fluid px-3 px-sm-4 mt-3 mb-4" style="width: 15rem;" src="{% static 'referral/img/undraw_secure_login_pdn4.svg' %}" alt="">
-          </div>
-          <center><h2><b>Your password has been set. You may go ahead and Login</h2>
-<br>
-          <h2><a href="{% url 'login' %}">Login Now &rarr;</a></h2>
-
-</div>
-</div>
-</div>
-        
         </div>
       </div>
       <!-- flex box end -->
@@ -74,8 +59,6 @@
 
 {% else %}
 {% load static %}
-{% load gravatar %}
-{% load percentage %}
 {% load crispy_forms_tags %}
 
 <!DOCTYPE html>
@@ -127,7 +110,7 @@
              <img class="img-fluid px-3 px-sm-4 mt-3 mb-4" style="width: 14rem;" src="{% static 'referral/img/undraw_access_denied_6w73.svg' %}" alt="">
           </div>
           <center><h2><b>The password reset link was invalid, possibly because it has already been used.
-      Please request a new password reset.</h2>
+      Please request a new password reset.</b></h2></center>
 <br>
           <h3><a href="{% url 'password_reset' %}">Request A New Password Reset &rarr;</a></h3>
 
