dashbpard removed sidenav bar

--- a/referral/static/referral/css/sb-admin-2.css
+++ b/referral/static/referral/css/sb-admin-2.css
@@ -4790,7 +4790,7 @@ input[type="button"].btn-block {
   padding: 0.5rem 0.75rem;
   margin-left: -1px;
   line-height: 1.25;
-  color: #4e73df;
+  color: #dcb865;
   background-color: #fff;
   border: 1px solid #dddfeb;
 }
@@ -4823,8 +4823,8 @@ input[type="button"].btn-block {
 .page-item.active .page-link {
   z-index: 3;
   color: #fff;
-  background-color: #4e73df;
-  border-color: #4e73df;
+  background-color: #dcb865;
+  border-color: #dcb865;
 }
 
 .page-item.disabled .page-link {
