--- a/referral/templates/referral/console.html
+++ b/referral/templates/referral/console.html
@@ -65,7 +65,7 @@
         <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
 <div class="container">
           <a class="navbar-brand" href="{% url 'login' %}">
-            <img style="width: 8rem;" src="{% static 'referral/assets/image/hero-logo.png' %}">
+            <img style="width: 8rem; padding-left: 0.5em;" src="{% static 'referral/assets/image/hero-logo.png' %}">
           </a>
 </div>
           <!-- Sidebar Toggle (Topbar) -->
