--- a/referral/templates/referral/index.html
+++ b/referral/templates/referral/index.html
@@ -215,7 +215,7 @@
                                         class="fas fa-star"></i><i class="fas fa-star"></i>
                                     <div class="user-profile">
                                         <div class="user-image">
-                                            <img src="assets/images/user.png" class="img-fluid">
+                                            <img src="{% static 'referral/aset/images/user.png' %}" class="img-fluid">
                                         </div>
                                         <h4 class="user-name">
                                             Mr. Shyam Shah
@@ -236,7 +236,7 @@
                                         class="fas fa-star"></i><i class="fas fa-star"></i>
                                     <div class="user-profile">
                                         <div class="user-image">
-                                            <img src="assets/images/user.png" class="img-fluid">
+                                            <img src="{% static 'referral/aset/images/user.png' %}" class="img-fluid">
                                         </div>
                                         <h4 class="user-name">
                                             Mr. Shyam Shah
