--- a/referral/templates/referral/index.html
+++ b/referral/templates/referral/index.html
@@ -42,8 +42,8 @@
                     </p>
                     <p class="pr-4">
                         Help your friends & family To find their dream home with Vihav & earn rewards.
-                        When your friend books a property at vihav with your reference,You get a direct
-                        reward of 6% of the amount
+                        When your friend books a property at vihav with your reference, You get
+                        rewards.
                     </p>
                 </div>
                 <div class="col-md-6">
