--- a/referral/templates/referral/console.html
+++ b/referral/templates/referral/console.html
@@ -260,6 +260,7 @@
                             <th>Contact</th>
                             <th>Email</th>
                             <th>Reference</th>
+                            <th>Site</th>
                             <th>Status</th>
                             <th>Amount</th>
                             <th>Notes</th>
@@ -275,6 +276,7 @@
                             <td>{{ i.contact_number }}</td>
                             <td>{{ i.email }}</td>
                             <td>{{ i.reference }}</td>
+                            <td>{{ i.site }}</td>
                             <td>{{ i.status}}</td>
                             <td>{{ i.amount }}</td>
                             <td>{{ i.note }}</td>
