--- a/users/templates/users/signup.html
+++ b/users/templates/users/signup.html
@@ -57,6 +57,7 @@
                       <div class="register-form-group">
                         <label for="number"> Contact Number*</label>
                         {{ form.contact_number }}
+                        {{ form.contact_number.errors }}
                       </div>
                     </div>
                     <div class="col-2">
